|Niresh| Added profanity backend to likhoindia

--- a/crowdsource-ui/src/views/modules/likhoIndia/profanity/profanity.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/profanity/profanity.ejs
@@ -18,11 +18,12 @@
     <link rel="stylesheet" type="text/css" href="../../css/common.css">
     <link rel="stylesheet" type="text/css" href="../../css/mic-speaker-testing.css">
     <style>.btn.focus,.btn:focus{outline:0;box-shadow:0 0}</style>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" async></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
 <%- include('../common/headerWithoutNavBar.ejs',{path:"../",MODULE:"Likho India", PAGE_TITLE:"Translate"}) %>
+<%- include('./profanity-thank-you.ejs',{type:"likhoindia"}) %>
 <div id="validator-page-content">
     <div class="container-fluid">
         <div id="content-wrapper" class="d-flex flex-column position-relative">
@@ -47,18 +48,12 @@
                     <label class="text-primary ml-2" style="font-size:28px;vertical-align:middle">Thank you for contributing!</label>
                 </div>
             </div>
-
-
-
             <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-sentences-row">
                 <div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-bold">
-                        <%= __('Thank you for your enthusiasm to translate the sentences.') %>
+                        <%= __('Thank you for contributing.') %>
                     </label><br><br>
                     <p>
                         <%- __('We do not have any data in <span id="spn-validation-language"></span> language. Please try again later.') %>
-                    </p>
-                    <p class="d-none">
-                        <%= __('Would you also like to contribute your voice?') %>
                     </p>
                     <div class="row justify-content-center mt-5">
                         <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
@@ -77,7 +72,7 @@
                     </p>
                     <div class="row justify-content-center mb-3 mx-2">
                         <div class="col-lg-4 col-md-4 col-sm-10 oflow-x-hid"></div>
-                        <a class="btn btn-primary h6 shadow rounded mt-4 p-3 my-lg-5 col-lg-4 col-md-4 col-sm-10" href="./validator-page.html">
+                        <a class="btn btn-primary h6 shadow rounded mt-4 p-3 my-lg-5 col-lg-4 col-md-4 col-sm-10" href="./profanity.html">
                             <%= __('Validate More') %>
                         </a>
                         <div class="col-lg-4 col-md-4 col-sm-10 oflow-x-hid"></div>
@@ -95,8 +90,8 @@
                 <button class="btn web-view"></button>
                 <button class="btn align-self-start mb-2 pl-4" id="submit-edit-button">
                     <svg width="208" height="66" viewBox="0 0 208 66" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="208" height="66" rx="33" fill="#D7D7D7"/>
-                        <text x="65" y="43" font-family="lato" font-size="24" fill="white" style="text-align:center">
+                        <path d="M1 33C1 15.3269 15.3269 1 33 1H175C192.673 1 207 15.3269 207 33C207 50.6731 192.673 65 175 65H33C15.3269 65 1 50.6731 1 33Z" fill="white" stroke="#007BFF" stroke-width="2"/>
+                        <text x="65" y="43" font-family="lato" font-size="24" fill="#343A40" style="text-align:center">
                             Profane
                         </text>
                     </svg>
@@ -109,7 +104,6 @@
                     <%= __('Skip') %>
                 </button>
             </div>
-            <%- include ../common/virtualKeyboard %>
             <div class="row justify-content-center mb-3 mt-lg-5 mt-md-5 mt-sm-1" id="progress-row">
                 <div class="col-12 col-sm-8 col-lg-7">
                     <div class="progress mt-1">
@@ -120,24 +114,21 @@
                     <div class="row justify-content-center"><span class="" id="currentSentenceLbl"></span><span class="">/</span><span class="" id="totalSentencesLbl"></span></div>
                 </div>
             </div>
-
         </div>
-        <div class="row my-3 p-3" style="justify-content:flex-end">
-            <%- include ../common/virtualKeyboardBtn.ejs %>
-        </div>
-
         <%- include('../common/report.ejs',{reportPara: "Help us understand what’s wrong with the sentence", "REPORT":[{h1:"Offensive",p1:"Hateful / Discriminatory / Vulgar language, drugs promotion etc."}]}); %>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.js"></script>
 
-        
+        <script src="../../js/likhoIndia/profanity.js"></script>
         <script src="../../js/common/speakerTesting.js"></script>
+
     </div>
 </div>
+
+
+
 </body>
 
 </html>
