--- a/crowdsource-ui/src/views/modules/sunoIndia/profanity/profanity.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/profanity/profanity.ejs
@@ -18,7 +18,6 @@
     <link rel="stylesheet" type="text/css" href="../../css/mic-speaker-testing.css">
     <style>.btn.focus,.btn:focus{outline:0;box-shadow:0 0}</style>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" async></script>
 </head>
 
 <body>
@@ -65,7 +64,7 @@
             </div>
             <div class="row justify-content-center my-auto my-3 d-none" id="thank-you-row">
                 <div class="col-md-8 col-sm-10 text-center align-items-center"><label class="h1 font-weight-bold my-5">
-                        <%= __('Thank you for contributing!') %>
+                        <%= __('Thank you for validating!') %>
                     </label>
                     <p class="d-none">
                         <%- __('You have helped us validate <span id="spn-validation-count" class="font-wt-900"></span> recordings') %>
@@ -73,7 +72,7 @@
                     <div class="row justify-content-center mb-3 mx-2">
                         <div class="col-lg-4 col-md-4 col-sm-10 oflow-x-hid"></div>
                         <a class="btn btn-primary h6 shadow rounded mt-4 p-3 my-lg-5 col-lg-4 col-md-4 col-sm-10" href="./profanity.html">
-                            <%= __('Contribute More') %>
+                            <%= __('Validate More') %>
                         </a>
                         <div class="col-lg-4 col-md-4 col-sm-10 oflow-x-hid"></div>
                     </div>
@@ -174,7 +173,6 @@
         <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/simple-keyboard@latest/build/index.js"></script>
 
         <script src="../../js/sunoIndia/profanity.js"></script>
         <script src="../../js/common/speakerTesting.js"></script>
