| Priyanshu| fix boloInida loader issue in validation page

--- a/crowdsource-ui/src/views/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/validator-prompt-page.ejs
@@ -106,7 +106,7 @@
                         </svg>
 
                     </button>
-                    <div class="row justify-content-center mx-2" id="loader-play-btn">
+                    <div class="row justify-content-center mx-2 d-none" id="loader-play-btn">
                         <div><span class="spinner w-h-5"></span></div>
                     </div>
                     <div class="align-items-center justify-content-center align-items-center mb-2" id="audio-player-btn">
