--- a/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="form-group green-border-focus col-lg-4 col-md-5 col-12 m-0" id="edit-text">
-                    <label><%- __('Your Edit') %></label>
+                    <label><%- __('Your Edit') %> ( <span id="edit-language"></span> )</label>
                     <div class="arrow-right"></div>
                     <textarea class="form-control edit-area" maxlength="1000" id="edit" rows="3" placeholder="Start typing here..." style="resize:none"></textarea>
                 </div>
