--- a/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/validation/validator-prompt-page.ejs
@@ -52,7 +52,7 @@
             <div class="row m-0 justify-content-center mb-5 mb-lg-0 d-none no-margin-mobile" id="editor-row">
                 <div class="form-group col-lg-8 col-md-8 col-12 m-0 p-0" id="textarea-row">
                     <div class="form-group col-lg-12 col-md-5 col-12 m-0 edit-text" id="edit-text" style="border-radius:12px">
-                        <label><%- __('YOUR EDIT') %></label>
+                        <label><%- __('Your Edit') %> ( <span id="edit-language"></span> )</label>
                         <textarea class="form-control edit-area" maxlength="1000" id="edit" rows="3" placeholder="Start typing here..." style="resize:none"></textarea>
                     </div>
                 </div>
