--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/contribution/thank-you.ejs
@@ -70,7 +70,7 @@
             <div id="before_badge_content" class="d-none">
                 <h4 class="mb-3 mt-5 mt-lg-0"><%- __('You are driving the spirit of your language') %></h4>
             </div>
-            <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('sentences contributed') %></p>
+            <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('sentence(s) contributed') %></p>
             <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="./badges.html">Know more</a>') %></p>
             <%- include('../common/badgesMilestone.ejs',{MODULE:"likho"}) %>
             <%- include ../common/sharableLink.ejs %>
