--- a/crowdsource-ui/src/views/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/validator-thank-you.ejs
@@ -74,7 +74,7 @@
             <div id="before_badge_content" class="d-none">
                 <h4 class="mb-3 mt-5 mt-lg-0"><%- __('You are driving the spirit of your language') %></h4>
             </div>
-            <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('sentences validated') %></p>
+            <p id="user-contribution-msg"><span id="user-contribution" class="text-primary"></span> <%= __('sentence(s) validated') %></p>
             <p id="sentence_away_msg"><%- __('You are just <span id="sentense_away_count"></span> sentences away from earning your <span id="next_badge_name"></span> Badge. <a href="./validator-badges.html">Know more</a>') %></p>
             <div class="row d-none" id="milestone_text">
                 <div class="col-12 col-lg-5 col-md-5 mt-lg-5 justify-content-between">
