--- a/crowdsource-ui/src/views/modules/sunoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/thankyou/validation/validator-thank-you.ejs
@@ -37,7 +37,7 @@
     <div class="row lazy">
         <div class="col-lg-12 col-md-11 col-lg-11 thankyou-page ml-lg-auto">
             <div class="row m-0">
-                <div class="col-2"></div>
+                <div class="col-2 col-lg-3"></div>
                 <div class="col-lg-3 col-md-3 col-sm-6 pl-0 web-view">
                     <h4 class="h4 my-3 font-weight-normal text-right">
                         <%= __('Your language and top 3 most contributed languages') %>
