Ayush | Code refactoring

--- a/crowdsource-ui/src/views/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/validator-prompt-page.ejs
@@ -106,11 +106,11 @@
                         </svg>
 
                     </button>
-                    <div class="row justify-content-center mx-2 d-none" id="loader-play-btn">
-                        <div><span class="spinner w-h-5"></span></div>
-                    </div>
                     <div class="align-items-center justify-content-center align-items-center mb-2" id="audio-player-btn">
-                        <div class="audioplayer d-flex justify-content-center align-items-center"><img src="../img/play.svg" alt="play" id="play" class="cursor-pointer"> <img src="../img/pause.svg" alt="pause" id="pause" class="d-none cursor-pointer"> <img src="../img/replay.svg" alt="replay" id="replay" class="d-none justify-self-center cursor-pointer"></div>
+                        <div class="audioplayer d-flex justify-content-center align-items-center">
+                            <img src="../img/play.svg" alt="play" id="play" class="cursor-pointer"> 
+                            <img src="../img/pause.svg" alt="pause" id="pause" class="d-none cursor-pointer"> 
+                            <img src="../img/replay.svg" alt="replay" id="replay" class="d-none justify-self-center cursor-pointer"></div>
                         <h3 class="font-wt-800 text-center mt-2" id="audioplayer-text_play">
                             <%= __('Play') %>
                         </h3>
