| Priyanshu| fix language-hour-goal issue in thankyou page

--- a/crowdsource-ui/src/views/modules/likhoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/thankyou/validation/validator-thank-you.ejs
@@ -117,7 +117,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-5">
-        <%- include('../common/languageGoal.ejs', {ButtonText:"Validate More",url:"./validator-page.html", TEXT:"language pair"})%>
+        <%- include('../common/languageGoal.ejs', {ButtonText:"Validate More",url:"./validator-page.html", TEXT:"language pair",TEXT2:"translations"})%>
     </div>
 
 </div>
