--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/contribution/thank-you.ejs
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-5">
-        <%- include('../common/languageGoal.ejs', {ButtonText:"Contribute More",url:"./record.html",TEXT:"language"})%>
+        <%- include('../common/languageGoal.ejs', {ButtonText:"Contribute More",url:"./record.html",TEXT:"language",TEXT2:"images"})%>
     </div>
 
 </div>
