--- a/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/validation/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/thankyou/validation/validator-thank-you.ejs
@@ -115,7 +115,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-5">
-        <%- include('../common/languageGoal.ejs', {ButtonText:"Validate More",url:"./validator-page.html",TEXT:"language"})%>
+        <%- include('../common/languageGoal.ejs', {ButtonText:"Validate More",url:"./validator-page.html",TEXT:"language",TEXT2:"images"})%>
     </div>
 
 </div>
