--- a/crowdsource-ui/src/views/validator-thank-you.ejs
+++ b/crowdsource-ui/src/views/validator-thank-you.ejs
@@ -113,7 +113,7 @@
         </div>
     </div>
     <div class="row justify-content-center mt-5">
-        <%- include('../../build/views/common/languageGoal.ejs', {ButtonText:"Validate More",url:"./validator-page.html",TEXT:"language"})%>
+        <%- include('../../build/views/common/languageGoal.ejs', {ButtonText:"Validate More",url:"./validator-page.html",TEXT:"language",TEXT2:"hrs"})%>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
